restyled clear-button to make it wider, added styling to future header to fix alignment and added class future-data to remove padding in 5day-forecast boxes

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -18,7 +18,7 @@
 #clear-button {
     margin-top: 20px;
     margin-left: 20px;
-  
+    width: 100px;
 }
 
 .futurecast {
@@ -26,5 +26,10 @@
 }
 
 #future-header {
-    margin: 10px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.future-data {
+    padding: 0;
 }
